--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name":        "genj/social-feed-bundle",
+    "name":        "skysurfer0110/social-feed-bundle",
     "type":        "symfony-bundle",
     "description": "collecting posts from all type of social feeds like twitter, instagram, facebook for multiple user accounts.",
     "keywords":    ["genj", "social", "feed", "symfony2", "bundle"],
