--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     ],
 
     "require": {
-        "symfony/symfony": ">=3.1.2",
+        "symfony/symfony": "dev-master",
         "sensio/framework-extra-bundle": "~3.0",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "~1.2",
@@ -30,7 +30,7 @@
         "gedmo/doctrine-extensions": ">=2.3.9",
         "vich/uploader-bundle": "~0|~1",
         "themattharris/tmhoauth": "*",
-        "facebook/php-sdk-v4" : "4.0.*",
+        "facebook/php-sdk-v4" : "dev-master",
         "php-instagram-api/php-instagram-api": "dev-master"
     },
 
